Fix Dark Mode

--- a/src/app/components/footer/footer.page.scss
+++ b/src/app/components/footer/footer.page.scss
@@ -1,25 +1,85 @@
- :root {
-    --ion-text-color-dark: #ffffff; // Textfarbe im Dark Mode
-    --ion-tab-bar-background-dark: #333333; // Hintergrundfarbe des Tab-Bar im Dark Mode
-    --ion-color-primary: #3880ff; // Primärfarbe für ausgewählte Elemente im Dark Mode
+/* Light Mode Specific Styles */
+@media (prefers-color-scheme: light) {
+  :root {
+    --ion-text-color-dark: #000000; // Textfarbe im Light Mode (du kannst dies anpassen)
+    --ion-tab-bar-background-light: #ffffff; // Hintergrundfarbe des Tab-Bar im Light Mode
+    --ion-color-primary-light: #3880ff; // Primärfarbe für ausgewählte Elemente im Light Mode
+  }
+
+  .ios ion-footer {
+    // spezifische Styles für iOS im Light Mode
+  }
+
+  .md ion-footer {
+    // spezifische Styles für Material Design im Light Mode
+  }
+
+  ion-toolbar ion-icon {
+    color: #38388E; // kräftiges Lila für Icons in der Toolbar im Light Mode
   }
 
   ion-footer {
     ion-tab-bar {
-      --ion-tab-bar-background: var(--ion-tab-bar-background-dark); // Dunkler Hintergrund für den Tab-Bar
+      background-color: transparent; // Hintergrundfarbe für den Tab-Bar im Light Mode
 
       ion-tab-button {
-        color: var(--ion-text-color-dark); // Textfarbe im Dark Mode
-        --color-selected: var(--ion-color-primary); // Farbe für ausgewählten Tab im Dark Mode
-        --color-selected-hover: var(--ion-color-primary); // Farbe für Hover im Dark Mode
+        background-color: transparent;
+        color: var(--ion-text-color-dark); // Textfarbe im Light Mode
+        --color-selected: var(--ion-color-primary-light); // Farbe für ausgewählten Tab im Light Mode
+        --color-selected-hover: var(--ion-color-primary-light); // Farbe für Hover im Light Mode
 
         ion-icon {
-          --ion-color: var(--ion-text-color-dark); // Farbe der Icons im Dark Mode
+          color:   var(--ion-color-primary-tint);
         }
 
         ion-label {
           font-size: 12px; // Schriftgröße für Labels
+          color:   var(--ion-color-primary-tint);
         }
       }
     }
   }
+}
+
+/* Dark Mode Specific Styles */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --ion-text-color-dark: #ffffff; // Textfarbe im Dark Mode
+    --ion-tab-bar-background-dark: #333333; // Hintergrundfarbe des Tab-Bar im Dark Mode
+    --ion-color-primary-dark: #3880ff; // Primärfarbe für ausgewählte Elemente im Dark Mode
+  }
+
+  .ios ion-footer {
+    // spezifische Styles für iOS im Dark Mode
+  }
+
+  .md ion-footer {
+    // spezifische Styles für Material Design im Dark Mode
+  }
+
+  ion-toolbar ion-icon {
+    color: #ffffff; // Farbe der Icons im Dark Mode
+  }
+
+  ion-footer {
+    ion-tab-bar {
+      background-color: transparent; // Hintergrundfarbe für den Tab-Bar im Dark Mode
+
+      ion-tab-button {
+        background-color: transparent;
+        color: var(--ion-text-color-dark); // Textfarbe im Dark Mode
+        --color-selected: var(--ion-color-primary-dark); // Farbe für ausgewählten Tab im Dark Mode
+        --color-selected-hover: var(--ion-color-primary-dark); // Farbe für Hover im Dark Mode
+
+        ion-icon {
+          color: white; // Farbe der Icons im Dark Mode
+        }
+
+        ion-label {
+          font-size: 12px; // Schriftgröße für Labels
+          color: white;
+        }
+      }
+    }
+  }
+}
